# praxis-agents-os

./: .dockerignore  .editorconfig  .gitignore  .npmrc  AGENTS.md  GNUmakefile  Makefile  README.md  REVIEW.md  docker-compose.yml
apps/api/: .dockerignore  .env.example  .gcloudignore  AGENTS.md  Dockerfile  README.md  alembic.ini  main.py  pyproject.toml  ruff.toml
apps/api/alembic/: env.py
apps/api/core/: database.py  dependencies.py  logging.py  observability.py  rate_limiting.py
apps/api/core/exceptions/: _problem.py  auth.py  database.py  exception_handlers.py  general.py  integration.py  oauth.py
apps/api/core/settings/: __init__.py  agents.py  app.py  auth.py  aws.py  azure.py  base.py  database.py  email.py  files.py  gcp.py  integrations.py  jobs.py  models.py  observability.py  providers.py  (+4 more)
apps/api/integrations/: __init__.py
apps/api/middleware/: __init__.py  audit_context.py  body_size.py  csrf.py  db_session.py  rate_limit.py  request_id.py  request_logging.py  security_headers.py  utils.py
apps/api/models/: __init__.py  agent.py  agent_run.py  audit_event.py  base.py  conversation.py  conversation_todos.py  files.py  integrations.py  jobs.py  notification.py  rate_limiting.py  scratch.py  security.py  session.py  skills.py  user.py  workspace.py
apps/api/routes/: __init__.py
apps/api/tests/: README.md  conftest.py
apps/api/utils/: dates.py  document_markdown.py  json_safe.py  metadata.py  pagination.py  request.py  security.py  slugify.py  tokens.py  validation.py
apps/api/workers/: __init__.py  agent_runner.py  job_runner.py  main.py
(+1292 files in other folders)
