[project]
name = "api"
version = "0.1.0"
description = "Praxis Agents OS backend API"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.5",
    "asyncpg>=0.31.0",
    "croniter>=6.2.2",
    "cryptography>=49.0.0",
    "fastapi>=0.138.1",
    "greenlet>=3.3.0",
    "httpx2>=2.5.0",
    "markitdown[docx,pdf,pptx,xlsx]>=0.1.6",
    "prometheus-client>=0.25.0",
    "pwdlib[argon2]>=0.3.0",
    "pydantic-ai>=2.1.0",
    "pydantic-settings>=2.14.2",
    "pyjwt>=2.13.0",
    "pyotp>=2.10.0",
    "sqlalchemy>=2.0.51",
    "tzdata>=2026.2",
    "uvicorn>=0.49.0",
]

[project.optional-dependencies]
azure = ["azure-identity>=1.17", "azure-storage-blob>=12.22"]
gcs = ["google-cloud-storage>=2.18"]
s3 = ["boto3>=1.35"]

[dependency-groups]
dev = [
    "httpx>=0.28.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.15.19",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
